tox linters on github action

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,8 @@
-# CHANGE THIS
-fixes:
-   - "/ansible_collections/NAMESPACE/COLLECTION/::"
+---
+coverage:
+  precision: 2
+  round: down
+  range: "70...100"
+  status:
+    project:
+      default: false
