--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,4 +1,4 @@
-name: Lint extra docsite docs and links
+name: CI
 on:
   # Run CI against all pushes (direct commits, also merged PRs), Pull Requests
   push:
@@ -11,24 +11,30 @@ on:
   schedule:
     - cron: '0 6 * * *'
 
+env:
+  NAMESPACE: cloud
+  COLLECTION_NAME: aws_roles
+
 jobs:
-  docsite:
-    name: Lint extra docsite docs and links
-    permissions:
-      contents: read
+
+  linters:
+    name: linters (black, yamllint, flake8)
     runs-on: ubuntu-latest
     steps:
 
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          path: ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
 
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: '3.8'
 
-      - name: Install antsibull-docs
-        run: pip install antsibull-docs --disable-pip-version-check
+      - name: Install tox into environment
+        run: pip install tox
 
-      - name: Run collection docs linter
-        run: antsibull-docs lint-collection-docs .
+      - name: Run linters
+        run: tox -e linters -vv
+        working-directory: ./ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
