--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
   black >= 22.0, < 23.0
 
 commands =
-  black -v --check --diff {toxinidir}/playbooks {toxinidir}/tests
+  black -v --check --diff {toxinidir}/playbooks
 
 [testenv:linters]
 deps =
@@ -16,7 +16,7 @@ deps =
   {[testenv:black]deps}
 
 commands =
-  black -v --check --diff {toxinidir}/playbooks {toxinidir}/tests
+  black -v --check --diff {toxinidir}/playbooks
   yamllint {toxinidir}
   flake8 {toxinidir}
 
