--- a/playbooks/webapp.yaml
+++ b/playbooks/webapp.yaml
@@ -30,6 +30,13 @@
     - community.aws
     - amazon.aws
 
+  module_defaults:
+    group/aws:
+      aws_access_key: "{{ aws_access_key }}"
+      aws_secret_key: "{{ aws_secret_key }}"
+      security_token: "{{ security_token | default(omit) }}"
+      region: "{{ aws_region }}"
+
   vars_files:
     - vars/main.yaml
 
