--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -9,9 +9,6 @@
     - when: tag_key_to_terminate_instances | length != 0
       block:
 
-          - debug:
-              var: tag_value_to_terminate_instances
-
           - name: prepare filters dict to filter running instances with specified tag
             ansible.builtin.set_fact:
                 instance_filters: "{{ { 'instance-state-name': 'running' ,  'tag:' + tag_key_to_terminate_instances: tag_value_to_terminate_instances } }}"
@@ -25,10 +22,19 @@
             set_fact:
               instance_ids: "{{ tagged_instances.instances | map(attribute='instance_id') | list }}"
 
+          - name: disable instance termination protection if terminate_termination_protected_instances is true
+            amazon.aws.ec2_instance:
+              instance_ids:
+                - "{{ item }}"
+              termination_protection: false
+            with_items: "{{ instance_ids }}"
+            when: terminate_termination_protected_instances == True
+
           - name: terminate instances
             amazon.aws.ec2_instance:
               instance_ids:
                 - "{{ item }}"
               state: absent
+            register: terminate_result
             with_items:
               - "{{ instance_ids }}"
