--- a/roles/ec2_instance_terminate_by_tag/defaults/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/defaults/main.yml
@@ -1,4 +1,3 @@
 ---
-tag_key_to_terminate_instances: ToBeTerminated
-tag_value_to_terminate_instances: False
+tag_value_to_terminate_instances:
 terminate_protected_instances: False
