add dependency with role aws_setup_credentials for role awsconfig_detach_and_delete_internet_gateway

--- a/roles/awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
+++ b/roles/awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
@@ -55,8 +55,4 @@
 
   module_defaults:
     group/aws:
-      aws_access_key: "{{ aws_access_key }}"
-      aws_secret_key: "{{ aws_secret_key }}"
-      aws_profile: "{{ aws_profile | default(omit) }}"
-      security_token: "{{ security_token | default(omit) }}"
-      region: "{{ aws_region }}"
+      "{{ aws_role_credentials }}"
